Fixed row + row spacing issue

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -48,12 +48,6 @@
 }
 
 
-// Remove spacing from sections inherited from original
-.main .bk-zone .widget:not(.row) {
-    margin-bottom: 15px;
-}
-
-
 // Move spacing to first widget in the main zone (not sections)
 .edit #page-zones__main-overlay + .widget:not(.row),
 #page-zones__main > .widget:not(.row):first-child {
