--- a/stylesheet.less
+++ b/stylesheet.less
@@ -29,7 +29,7 @@ body {
 .main {
   padding: 40px 0;
 
-  .bk-zone .widget {
+  .bk-zone .widget:not(.row) {
     margin-bottom: 15px;
   }
 }
